--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -197,8 +197,8 @@ outputs:
       - networks
       - get_param: network
       - 0
-  topology_id:
-    description: The ID of the deployed stack.
+  web_cluster_info:
+    description: Information of the web cluster
     value:
-      get_param:
-      - OS::stack_id
+     get_resource:
+     - web_cluster
