--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -21,9 +21,9 @@ parameters:
   cluster_size:
     type: number
     description: Number of web servers
-  db_root_password:
+  web_cluster_name:
     type: string
-    description: Password for root access to the DB server
+    description: Name of the web cluster
 resources:
   db:
     type: OS::Nova::Server
@@ -35,6 +35,8 @@ resources:
       key_name:
         get_param: key
       config_drive: true
+      metadata:
+        type: database
       user_data_format: RAW
       user_data:
         str_replace:
@@ -80,6 +82,9 @@ resources:
           metadata:
             metering.stack:
               get_param: OS::stack_id
+            cluster:
+              get_param: web_cluster_name
+            type: worker
           user_data:
             str_replace:
               template: |
@@ -126,6 +131,9 @@ resources:
           - networks
           - get_param: network
           - 0
+        type: balancer
+        cluster:
+          get_param: web_cluster_name
       config_drive: true
 #      networks:
 #      - port: { get_resource: port }
@@ -188,17 +196,22 @@ outputs:
 #      - networks
 #      - get_param: public_network
 #      - 0
-  server_ips:
-    description: The public IP address of the newly configured Server.
+#  server_ips:
+#    description: The public IP address of the newly configured Server.
+#    value:
+#      get_attr:
+#      - web_cluster
+#      - attributes
+#      - networks
+#      - get_param: network
+#      - 0
+#  topology_id:
+#    description: The ID of the deployed stack.
+#    value:
+#      get_param:
+#      - OS::stack_id
+  resources:
+    description: Topology Info
     value:
-      get_attr:
-      - web_cluster
-      - attributes
-      - networks
-      - get_param: network
-      - 0
-  web_cluster_info:
-    description: Information of the web cluster
-    value:
-     get_resource:
-     - web_cluster
+      get_param:
+      - show
