--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -188,30 +188,21 @@ resources:
 #        get_resource: port
 
 outputs:
-#  load_balancer_ip:
-#    description: The public IP address of the load balancer.
-#    value:
-#      get_attr:
-#      - lb
-#      - networks
-#      - get_param: public_network
-#      - 0
-#  server_ips:
-#    description: The public IP address of the newly configured Server.
-#    value:
-#      get_attr:
-#      - web_cluster
-#      - attributes
-#      - networks
-#      - get_param: network
-#      - 0
-#  topology_id:
-#    description: The ID of the deployed stack.
-#    value:
-#      get_param:
-#      - OS::stack_id
-  resources:
-    description: Topology Info
+  load_balancer:
+    description: Load balancer info.
     value:
-      get_param:
+      get_attr:
+      - lb
+      - show
+  database:
+    description: Database info.
+    value:
+      get_attr:
+      - db
+      - show
+  cluster_info:
+    description: Web cluster resources info.
+    value:
+      get_attr:
+      - web_cluster
       - show
