--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -155,6 +155,10 @@ resources:
         echo "* * * * * curl -s http://169.254.169.254/openstack/latest/meta_data.json | python /etc/apache2/update.py | /usr/bin/logger -t apache2_update" >>_crontab
         crontab <_crontab
         rm _crontab
+        
+        wget http://ceras.eso.yorku.ca/etavirp/proxy/ProxyServer.jar > proxy.log
+        sudo nohup java -jar ./ProxyServer.jar -remote-address=\"127.0.0.1\" -remote-port=\"9100\" -control-port=\"9300\" > proxy.log
+    
       user_data_format: RAW
 #  floating_ip:
 #    type: OS::Neutron::FloatingIP
