--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -158,7 +158,7 @@ resources:
         rm _crontab
         
         wget http://ceras.eso.yorku.ca/etavirp/proxy/ProxyServer.jar > proxy.log
-        sudo nohup java -jar ./ProxyServer.jar -remote-address=\"127.0.0.1\" -remote-port=\"9100\" -control-port=\"9300\" > proxy.log
+        java -jar ./ProxyServer.jar -remote-address=\"127.0.0.1\" -remote-port=\"9100\" -control-port=\"9300\" > proxy.log
     
       user_data_format: RAW
 #  floating_ip:
