--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -126,6 +126,7 @@ resources:
         apt-get -y install apache2 python
         apt-get -y install default-jdk
 
+        iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 9100
         cp /etc/apache2/mods-available/proxy.conf /etc/apache2/mods-available/proxy_bkp.conf
         cp /etc/apache2/mods-available/proxy_balancer.conf /etc/apache2/mods-available/proxy_balancer_bkp.conf
 
@@ -158,7 +159,7 @@ resources:
         rm _crontab
         
         wget http://ceras.eso.yorku.ca/etavirp/proxy/ProxyServer.jar > proxy.log
-        java -jar ./ProxyServer.jar -remote-address=\"127.0.0.1\" -remote-port=\"9100\" -control-port=\"9300\" > proxy.log
+        java -jar ./ProxyServer.jar -remote-address="127.0.0.1" -remote-port="9100" -control-port="9300" > proxy.log
     
       user_data_format: RAW
 #  floating_ip:
