--- a/HEATTemplates/templates/three_tier_architecture.yaml
+++ b/HEATTemplates/templates/three_tier_architecture.yaml
@@ -75,7 +75,7 @@ resources:
                 #apt-get update
                 #apt-get install -y dos2unix
                 #apt-get install -y tomcat7
-                iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8080
+                #iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 9200
                 #wget http://ceras.eso.yorku.ca/etavirp/tomcat/DatabaseOperations.war -O /var/lib/tomcat7/webapps/DatabaseOperations.war
 
                 #/etc/init.d/tomcat7 restart
